--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=booksAPI
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookdb
+spring.datasource.username=bookmgmt
+spring.datasource.password=booksarecool
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
