--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>at.schnow265</groupId>
+	<groupId>dev.schnow265</groupId>
 	<artifactId>booksAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>booksAPI</name>
